{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 13,
  "lineage": "592e47fa-daf3-8e0a-9ccc-35ea2f1a4620",
  "resources": [
    {
      "module": "module.webapp.module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-webserver",
      "provider": "module.webapp.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b44050b2d893d5f7",
            "arn": "arn:aws:ec2:ap-south-1:253154466461:instance/i-012a965fc3ecfeff1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012a965fc3ecfeff1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deploy-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d00a9ef4fd8ed2bf",
            "private_dns": "ip-10-0-2-162.ap-south-1.compute.internal",
            "private_ip": "10.0.2.162",
            "public_ip": "13.233.146.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-015ebe76dc11546b0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dc24452e8b21ab57",
            "tags": {
              "Name": "My-server",
              "Site": "my-web-site"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c631e1d460aa1f25"
            ]
          },
          "dependencies": [
            "module.core_infra.module.network.aws_subnet.my-public1",
            "module.core_infra.module.network.aws_vpc.my-main",
            "module.core_infra.module.security.aws_security_group.my-webserver"
          ]
        }
      ]
    },
    {
      "module": "module.core_infra.module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "module.core_infra.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-031d57e5cce197aa8",
            "owner_id": "253154466461",
            "tags": {
              "Name": "my-igw",
              "Site": "my-web-site"
            },
            "vpc_id": "vpc-04ac10e4152925e43"
          },
          "dependencies": [
            "module.core_infra.module.network.aws_vpc.my-main"
          ]
        }
      ]
    },
    {
      "module": "module.core_infra.module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-rt",
      "provider": "module.core_infra.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b00357595ba38ca0",
            "owner_id": "253154466461",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-031d57e5cce197aa8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-rt",
              "Site": "my-web-site"
            },
            "vpc_id": "vpc-04ac10e4152925e43"
          },
          "dependencies": [
            "module.core_infra.module.network.aws_internet_gateway.my-igw",
            "module.core_infra.module.network.aws_vpc.my-main"
          ]
        }
      ]
    },
    {
      "module": "module.core_infra.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-public1",
      "provider": "module.core_infra.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bedcfdb7b8a7642",
            "route_table_id": "rtb-0b00357595ba38ca0",
            "subnet_id": "subnet-0dc24452e8b21ab57"
          },
          "dependencies": [
            "module.core_infra.module.network.aws_internet_gateway.my-igw",
            "module.core_infra.module.network.aws_route_table.my-rt",
            "module.core_infra.module.network.aws_subnet.my-public1",
            "module.core_infra.module.network.aws_vpc.my-main"
          ]
        }
      ]
    },
    {
      "module": "module.core_infra.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-public2",
      "provider": "module.core_infra.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c65af181539318f5",
            "route_table_id": "rtb-0b00357595ba38ca0",
            "subnet_id": "subnet-0ad2669a853782e9b"
          },
          "dependencies": [
            "module.core_infra.module.network.aws_internet_gateway.my-igw",
            "module.core_infra.module.network.aws_route_table.my-rt",
            "module.core_infra.module.network.aws_subnet.my-public2",
            "module.core_infra.module.network.aws_vpc.my-main"
          ]
        }
      ]
    },
    {
      "module": "module.core_infra.module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-database",
      "provider": "module.core_infra.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:253154466461:security-group/sg-0479a84293381fae9",
            "description": "Allow MySQL/Aurora from WebService",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0479a84293381fae9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c631e1d460aa1f25"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database",
            "name_prefix": null,
            "owner_id": "253154466461",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-database",
              "Site": "my-web-site"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ac10e4152925e43"
          },
          "dependencies": [
            "module.core_infra.module.network.aws_vpc.my-main",
            "module.core_infra.module.security.aws_security_group.my-webserver"
          ]
        }
      ]
    },
    {
      "module": "module.core_infra.module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-webserver",
      "provider": "module.core_infra.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:253154466461:security-group/sg-0c631e1d460aa1f25",
            "description": "Allo HTTP from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c631e1d460aa1f25",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver",
            "name_prefix": null,
            "owner_id": "253154466461",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver",
              "Site": "my-web-site"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ac10e4152925e43"
          },
          "dependencies": [
            "module.core_infra.module.network.aws_vpc.my-main"
          ]
        }
      ]
    },
    {
      "module": "module.core_infra.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private1",
      "provider": "module.core_infra.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:253154466461:subnet/subnet-04619bac420d55779",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-04619bac420d55779",
            "map_public_ip_on_launch": true,
            "owner_id": "253154466461",
            "tags": {
              "Name": "my-private1",
              "Site": "my-web-site"
            },
            "vpc_id": "vpc-04ac10e4152925e43"
          },
          "dependencies": [
            "module.core_infra.module.network.aws_vpc.my-main"
          ]
        }
      ]
    },
    {
      "module": "module.core_infra.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private2",
      "provider": "module.core_infra.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:253154466461:subnet/subnet-0d373c8eb0f3b68ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0d373c8eb0f3b68ee",
            "map_public_ip_on_launch": true,
            "owner_id": "253154466461",
            "tags": {
              "Name": "my-private2",
              "Site": "my-web-site"
            },
            "vpc_id": "vpc-04ac10e4152925e43"
          },
          "dependencies": [
            "module.core_infra.module.network.aws_vpc.my-main"
          ]
        }
      ]
    },
    {
      "module": "module.core_infra.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-public1",
      "provider": "module.core_infra.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:253154466461:subnet/subnet-0dc24452e8b21ab57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0dc24452e8b21ab57",
            "map_public_ip_on_launch": true,
            "owner_id": "253154466461",
            "tags": {
              "Name": "my-public1",
              "Site": "my-web-site"
            },
            "vpc_id": "vpc-04ac10e4152925e43"
          },
          "dependencies": [
            "module.core_infra.module.network.aws_vpc.my-main"
          ]
        }
      ]
    },
    {
      "module": "module.core_infra.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-public2",
      "provider": "module.core_infra.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:253154466461:subnet/subnet-0ad2669a853782e9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ad2669a853782e9b",
            "map_public_ip_on_launch": true,
            "owner_id": "253154466461",
            "tags": {
              "Name": "my-public1",
              "Site": "my-web-site"
            },
            "vpc_id": "vpc-04ac10e4152925e43"
          },
          "dependencies": [
            "module.core_infra.module.network.aws_vpc.my-main"
          ]
        }
      ]
    },
    {
      "module": "module.core_infra.module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-main",
      "provider": "module.core_infra.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:253154466461:vpc/vpc-04ac10e4152925e43",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06b3c23f986d103e0",
            "default_route_table_id": "rtb-057d8360e7b36ef50",
            "default_security_group_id": "sg-02f0ddc3b0b757fb0",
            "dhcp_options_id": "dopt-b03ccedb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04ac10e4152925e43",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-057d8360e7b36ef50",
            "owner_id": "253154466461",
            "tags": {
              "Name": "my-vpc",
              "Site": "My-web-site"
            }
          }
        }
      ]
    }
  ]
}